# docker-pdf-invert

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: Dockerfile  pyproject.toml
frontend/frontend/: app.py
frontend/html/: index.html
frontend/templates/: index.html.j2
