[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [{ name = "dsillman2000", email = "dsillman2000@yahoo.com" }]
requires-python = ">=3.11,<4.0"
dependencies = ["flask (>=3.1.0,<4.0.0)", "gunicorn (>=23.0.0,<24.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
